[package]
name = "rplace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = { version = "1.0.22", features = ["zlib"] }

[profile.release]
codegen-units = 1
opt-level = 3
lto = "fat"
panic = "abort"
debug = 1
