[package]
name = "rplace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1"
rustc-hash = "1"
base64 = "0.13"
time = { version = "0.3", features = ["parsing", "macros"] }
serde = { version = "1", features = ["derive"] }
ciborium = "0.2.0"

[profile.release]
codegen-units = 1
opt-level = 3
lto = "fat"
panic = "abort"
debug = 1
